lots of visual improvments for index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
 
     * {
-      font-family: Arial, sans-serif;
+      font-family: Helvetica, Arial, sans-serif;
     }
 
     html, body {
@@ -17,14 +17,31 @@
       padding: 0;
     }
 
+    body {
+      overflow: hidden;
+    }
+
     #medias {
       margin-top: 50px;
       margin-bottom: 50px;
       text-align: center;
+      margin: auto;
     }
+
     #medias > img, video {
-      max-width: 86vw;
-      max-height: 95vh;
+      display: block;
+      margin: 16px auto 16px auto;
+      max-width: 90vw;
+      max-height: 90vh;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, .2);
+    }
+
+    .medias__frame--landscape {
+      width: 90vw;
+    }
+
+    .medias__frame--portrait {
+      height: 90vh;
     }
 
     #history {
@@ -62,11 +79,74 @@
 
     }
 
+    #menu {
+      position: fixed;
+      font-size: 90%;
+      font-weight: lighter;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      background: #FFF;
+      opacity: 0;
+      bottom: 10px;
+      left: 10px;
+      padding: 8px;
+      transition: .1s linear;
+      border-radius: 4px;
+    }
+
+    #menu:hover {
+      opacity: 1;
+      background: rgba(255, 255, 255, .7);
+    }
+
+    #menu label {
+      display: block;
+      padding-left: 15px;
+      text-indent: -15px;
+    }
+
+    #menu input {
+      width: 13px;
+      height: 13px;
+      padding: 0;
+      margin: 0 4px 0 4px;
+      vertical-align: bottom;
+      position: relative;
+      top: -1px;
+      *overflow: hidden;
+    }
+
+    #loading {
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      width: 100vw;
+      height: 100vh;
+      background: #000;
+      transition: 1s linear;
+    }
+
+    #loading > img {
+      width: 450px;
+      margin: auto;
+    }
+
     </style>
 
   </head>
 
   <body>
+
+    <div id="loading">
+      <img src="https://media.giphy.com/media/3ohs7HXGnF6vbmVVcY/giphy.gif" />
+    </div>
+
+    <div id="menu"></div>
 
     <div id="medias"></div>
 
@@ -75,6 +155,20 @@
     </div>
 
     <script>
+
+    var ready = 9999;
+
+    function shuffle(a) {
+      var j, x, i;
+      for (i = a.length - 1; i > 0; i--) {
+        j = Math.floor(Math.random() * (i + 1));
+        x = a[i];
+        a[i] = a[j];
+        a[j] = x;
+      }
+      return a;
+    }
+
     function fetchJson(callback) {
       let url = "file://" + window.location.pathname.substring(0,
         window.location.pathname.lastIndexOf("/")) + "/index.json";
@@ -82,7 +176,7 @@
       xhttp.open("GET", url, true);
       xhttp.onreadystatechange = function() {
         if (xhttp.readyState === 4 && xhttp.status === 200) {
-          if (callback) callback(JSON.parse(xhttp.response));
+          if (callback) callback(shuffle(JSON.parse(xhttp.response)));
         }
       }
       xhttp.send();
@@ -117,40 +211,123 @@
       wrapper.focus();
     }
 
+    function setMediaOrientation(element) {
+      let ratio = window.innerWidth / window.innerHeight;
+      if (element.clientWidth > ratio * element.clientHeight) {
+        element.className = "medias__frame--landscape";
+      } else {
+        element.className = "medias__frame--portrait";
+      }
+    }
+
     function createElements(array) {
       let parent = document.querySelector("#medias");
+      let folders = new Set();
+      ready = array.length;
       for (let i = 0; i < array.length; i++) {
+        let folder = array[i].file.substring(2, array[i].file.lastIndexOf("/"));
+        folders.add(folder);
         let child;
         if (array[i]["file"].endsWith("webm")) {
           child = document.createElement("video");
-          // child.setAttribute("controls", "");
-          child.setAttribute("autoplay", "");
+          child.setAttribute("controls", "");
+          child.setAttribute("loop", "");
         } else {
           child = document.createElement("img");
         }
-        child.setAttribute("src", array[i].file);
+        child.onloadeddata = function() {
+          ready--;
+          setMediaOrientation(child);
+          if (ready <= 0) {
+            document.querySelector("body").style.overflow = "auto";
+            document.querySelector("#loading").style.opacity = 0;
+            setTimeout(function () {
+              document.querySelector("#loading").style.display = "none";
+            }, 1000);
+          }
+        }
         child.addEventListener("dblclick", (event) => {
-          //TODO: go fullscreen
-        });
-        child.addEventListener("click", (event) => {
-          if (event.ctrlKey) {
-            formatHistory(
-              document.querySelector("#history__wrapper"),
-              array[i]);
-            document.querySelector("#history").style.display = "flex";
-            document.querySelector("body").style.overflow = "hidden";
+          if (document.fullScreen || document.mozFullScreen
+            || document.webkitIsFullScreen) {
+            document.mozCancelFullScreen();
+          } else {
+            if (child.requestFullScreen) {
+              child.requestFullScreen();
+            } else if (child.mozRequestFullScreen) {
+              child.mozRequestFullScreen();
+            }
           }
         });
+        child.showHistory = function(event) {
+          formatHistory(
+            document.querySelector("#history__wrapper"),
+            array[i]);
+          document.querySelector("#history").style.display = "flex";
+          document.querySelector("body").style.overflow = "hidden";
+        }
+        child.setAttribute("src", array[i].file);
+        child.setAttribute("allowFullScreen", "true");
+        child.setAttribute("folder", folder);
         parent.appendChild(child);
       }
+      parent = document.querySelector("#menu");
+      folders.forEach((folder) => {
+        let label = document.createElement("label");
+        let input = document.createElement("input");
+        input.setAttribute("type", "checkbox");
+        input.setAttribute("checked", true);
+        eventHandler = function(event) {
+          let els = document.querySelectorAll("*[folder=\"" + folder + "\"]");
+          for (let i = 0; i < els.length; i++) {
+            els[i].style.display = (event.target.checked? "block":"none");
+          }
+        }
+        input.addEventListener("click", eventHandler);
+        label.addEventListener("click", eventHandler);
+        label.appendChild(input);
+        label.innerHTML = label.innerHTML + folder;
+        parent.appendChild(label);
+      });
+
     }
 
     document.querySelector("#history").addEventListener("click", (event) => {
       event.target.style.display = "none";
-        document.querySelector("body").style.overflow = "auto";
+      document.querySelector("body").style.overflow = "auto";
     });
 
     fetchJson(createElements);
+
+    window.addEventListener("keyup", (event) => {
+      let element = document.querySelector("img:hover, video:hover");
+      if (event.keyCode == 113 && element) {
+        element.showHistory();
+      } else if (event.keyCode == 27) {
+        document.querySelector("#history").style.display = "none";
+        document.querySelector("body").style.overflow = "auto";
+      }
+    });
+
+    window.onscroll = function() {
+      let videos = document.querySelectorAll("video");
+      for (let i = 0; i < videos.length; i++) {
+        let rect = videos[i].getBoundingClientRect();
+        if (rect.top > 0 && rect.bottom < window.innerHeight) {
+          videos[i].play();
+        } else {
+          videos[i].pause();
+        }
+      }
+    }
+
+    window.onresize = function() {
+      let medias = document.querySelectorAll("img, video");
+      for (let i = 0; i < medias.length; i++) {
+        setMediaOrientation(medias[i]);
+      }
+    }
+
+
     </script>
   </body>
 
